Added background and phone calling icon

--- a/pizza-order-frontend/src/component/phone-calling/phone-calling.component.html
+++ b/pizza-order-frontend/src/component/phone-calling/phone-calling.component.html
@@ -1,1 +1,4 @@
-<p>phone-calling works!</p>
+<div class="calling-group">
+  <div class="calling-circle"></div>
+  <img class="calling-image" src="/assets/svg/calling.svg" alt="calling">
+</div>
