--- a/pizza-order-frontend/src/styles.css
+++ b/pizza-order-frontend/src/styles.css
@@ -1,1 +1,3 @@
-/* You can add global styles to this file, and also import other style files */
+body {
+  background: linear-gradient(140deg, #540000 0%, #B40000 100%);
+}
