--- a/pizza-order-frontend/src/component/phone-calling/phone-calling.component.html
+++ b/pizza-order-frontend/src/component/phone-calling/phone-calling.component.html
@@ -1,4 +1,4 @@
-<div class="calling-group">
+<div class="calling-group" tabindex="1">
   <div class="calling-circle"></div>
   <img class="calling-image" src="/assets/svg/calling.svg" alt="calling">
   <hr class="calling-line"/>
