Added new layout + picture

--- a/pizza-order-frontend/src/app/app.component.html
+++ b/pizza-order-frontend/src/app/app.component.html
@@ -1,1 +1,13 @@
-<app-phone-calling></app-phone-calling>
+<div class="main">
+  <div class="main-left-column">
+    <div class="main-title">
+      <h1 class="h1-title">Welcome to<br />our pizzeria!</h1>
+    </div>
+    <div class="main-image">
+      <img class="pizza-image" src="/assets/images/pizza-footer.png" alt="pizza footer"/>
+    </div>
+  </div>
+  <div class="main-content">
+    <app-phone-calling></app-phone-calling>
+  </div>
+</div>
