--- a/pizza-order-frontend/src/app/app.component.html
+++ b/pizza-order-frontend/src/app/app.component.html
@@ -1,7 +1,7 @@
 <div class="main">
   <div class="main-left-column">
     <div class="main-title">
-      <h1 class="h1-title">Welcome to<br />our pizzeria!</h1>
+      <h1 class="title-text">Welcome to<br /><span class="text-orange">our pizzeria</span>!</h1>
     </div>
     <div class="main-image">
       <img class="pizza-image" src="/assets/images/pizza-footer.png" alt="pizza footer"/>
