--- a/pizza-order-frontend/src/component/phone-calling/phone-calling.component.html
+++ b/pizza-order-frontend/src/component/phone-calling/phone-calling.component.html
@@ -1,5 +1,12 @@
-<div class="calling-group" tabindex="1" (click)="moveForward()">
-  <div class="calling-circle"></div>
-  <img class="calling-image" src="/assets/svg/calling.svg" alt="calling">
-  <hr class="calling-line"/>
+<div class="center-group">
+  <div class="calling-tab">
+    <div class="calling-animation" tabindex="1" (click)="moveForward()">
+      <div class="calling-text">
+        <p>Calling pizzeria</p>
+      </div>
+      <div class="calling-circle"></div>
+      <img class="calling-image" src="/assets/svg/calling.svg" alt="calling">
+      <hr class="calling-line"/>
+    </div>
+  </div>
 </div>
