--- a/pizza-order-frontend/src/app/app.component.css
+++ b/pizza-order-frontend/src/app/app.component.css
@@ -1,8 +1,3 @@
-@font-face {
-  font-family: 'pan-pizza';
-  src: url('/assets/fonts/panpizza.ttf') format('truetype');
-}
-
 .main {
   height: 100%;
   display: inline-flex;
@@ -35,6 +30,7 @@
 .main-image {
   position: fixed;
   bottom: -10px;
+  z-index: -1;
 }
 
 .pizza-image {
@@ -44,4 +40,5 @@
 
 .main-content {
   flex-grow: 1;
+  height: 100vh;
 }
