--- a/pizza-order-frontend/src/styles.css
+++ b/pizza-order-frontend/src/styles.css
@@ -1,3 +1,8 @@
+@font-face {
+  font-family: 'pan-pizza';
+  src: url('/assets/fonts/panpizza.ttf') format('truetype');
+}
+
 body {
   background: #191816;
 }
