--- a/pizza-order-frontend/src/component/phone-calling/phone-calling.component.html
+++ b/pizza-order-frontend/src/component/phone-calling/phone-calling.component.html
@@ -1,11 +1,11 @@
 <div class="center-group">
   <div class="calling-tab">
-    <div class="calling-animation" tabindex="1" (click)="moveForward()">
-      <div class="calling-text">
+    <div class="calling-animation" tabindex="1" (click)="moveForward(callingCircle,callingImage,callingText)">
+      <div #callingText class="calling-text">
         <p>Calling pizzeria</p>
       </div>
-      <div class="calling-circle"></div>
-      <img class="calling-image" src="/assets/svg/calling.svg" alt="calling">
+      <div #callingCircle class="calling-circle"></div>
+      <img #callingImage class="calling-image" src="/assets/svg/calling.svg" alt="calling">
       <hr class="calling-line"/>
     </div>
   </div>
