--- a/pizza-order-frontend/src/app/app.component.html
+++ b/pizza-order-frontend/src/app/app.component.html
@@ -8,6 +8,6 @@
     </div>
   </div>
   <div class="main-content">
-    <app-phone-calling></app-phone-calling>
+    <router-outlet></router-outlet>
   </div>
 </div>
