--- a/pizza-order-frontend/src/styles.css
+++ b/pizza-order-frontend/src/styles.css
@@ -1,3 +1,5 @@
+@import "assets/styles/main-content.css";
+
 @font-face {
   font-family: 'pan-pizza';
   src: url('/assets/fonts/panpizza.ttf') format('truetype');
