--- a/pizza-order-frontend/src/component/phone-calling/phone-calling.component.css
+++ b/pizza-order-frontend/src/component/phone-calling/phone-calling.component.css
@@ -36,53 +36,79 @@
 
 .callingCircleAfterClick {
   animation-name: callingCircleAnimation;
-  animation-duration: 1000ms;
+  animation-duration: 4500ms;
   animation-iteration-count: 1;
   animation-timing-function: ease;
   animation-fill-mode: forwards;
 }
 
 @keyframes callingCircleAnimation {
-  from {
+  0% {
     left: 60px;
     background: #cccccc;
   }
-  to {
+  25% {
     left: 210px;
     background: #048804;
+  }
+  75% {
+    left: 210px;
+    background: #048804;
+    opacity: 1;
+  }
+  100% {
+    left: 210px;
+    background: #048804;
+    opacity: 0;
   }
 }
 
 .callingImageAfterClick {
   animation-name: callingImageAnimation;
-  animation-duration: 1000ms;
+  animation-duration: 4500ms;
   animation-iteration-count: 1;
   animation-timing-function: ease;
   animation-fill-mode: forwards;
 }
 
 @keyframes callingImageAnimation {
-  from {
+  0% {
     left: 80px;
     filter: invert(27%) sepia(51%) saturate(2878%) hue-rotate(90deg) brightness(104%) contrast(97%);
   }
-  to {
+  25% {
     left: 230px;
     filter: invert(1) brightness(1);
+  }
+  75% {
+    left: 230px;
+    filter: invert(1) brightness(1);
+    opacity: 1;
+  }
+  100% {
+    left: 230px;
+    filter: invert(1) brightness(1);
+    opacity: 0;
   }
 }
 
 .callingTextAfterClick {
   animation-name: callingTextAnimation;
-  animation-duration: 1500ms;
-  animation-iteration-count: infinite;
+  animation-duration: 4500ms;
+  animation-iteration-count: 1;
   animation-timing-function: ease;
   animation-fill-mode: forwards;
 }
 
 @keyframes callingTextAnimation {
   0%   { opacity:0; }
-  50%  { opacity:1; }
+  12.5%   { opacity:1; }
+  25%   { opacity:0; }
+  37.5%  { opacity:1; }
+  50%  { opacity:0; }
+  62.5%  { opacity:1; }
+  75%  { opacity:0; }
+  87.5%  { opacity:1; }
   100% { opacity:0; }
 }
 
@@ -134,7 +160,7 @@
 }
 
 .calling-start-delayed-animation {
-  animation-name: callingStartDelayedAnimation;
+  animation-name: fadeInAnimation;
   animation-duration: 1000ms;
   animation-iteration-count: 1;
   animation-timing-function: ease-in-out;
@@ -142,11 +168,29 @@
   animation-delay: 1000ms;
 }
 
-@keyframes callingStartDelayedAnimation {
+@keyframes fadeInAnimation {
   from {
     opacity: 0;
   }
   to {
     opacity: 1;
+  }
+}
+
+.calling-end-delayed-animation {
+  animation-name: fadeOutAnimation;
+  animation-duration: 1500ms;
+  animation-iteration-count: 1;
+  animation-timing-function: ease-in-out;
+  animation-fill-mode: forwards;
+  animation-delay: 3000ms;
+}
+
+@keyframes fadeOutAnimation {
+  0% {
+    opacity: 1;
+  }
+  100% {
+    opacity: 0;
   }
 }
