Added opening animation to pizzeria-answered.component

--- a/pizza-order-frontend/src/component/pizzeria-answered/pizzeria-answered.component.html
+++ b/pizza-order-frontend/src/component/pizzeria-answered/pizzeria-answered.component.html
@@ -1,5 +1,10 @@
 <div class="center-group">
   <div class="calling-tab">
-    <p>pizzeria-answered works!</p>
+    <div class="conversation-group">
+      <div class="conversation-tile">
+        <img class="tile-hidden conversation-tile-img-start-animation" src="assets/images/waitress.png" alt="waitress">
+        <p class="tile-hidden conversation-tile-text-start-animation">Welcome to our pizzeria! This is Joanna, how can I help you today?</p>
+      </div>
+    </div>
   </div>
 </div>
