--- a/pizza-order-frontend/src/component/pizzeria-answered/pizzeria-answered.component.css
+++ b/pizza-order-frontend/src/component/pizzeria-answered/pizzeria-answered.component.css
@@ -1,4 +1,104 @@
 .calling-tab {
   width: 450px;
   height: 800px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.conversation-group {
+  width: 85%;
+  height: 90%;
+  display: inline-flex;
+  flex-direction: column;
+}
+
+.conversation-tile {
+  width: 100%;
+  margin-bottom: 16px;
+  display: inline-flex;
+  flex-direction: row;
+}
+
+.conversation-tile > img {
+  width: 75px;
+  height: 75px;
+  filter: drop-shadow(1px 1px 0 #f17012)
+  drop-shadow(-1px -1px 0 #f17012);
+}
+
+.tile-hidden {
+  opacity: 0;
+  width: 0;
+  height: 0;
+}
+
+.conversation-tile-img-start-animation {
+  animation-name: imgStartTileAnimation;
+  animation-duration: 500ms;
+  animation-iteration-count: 1;
+  animation-timing-function: ease;
+  animation-fill-mode: forwards;
+  animation-delay: 500ms;
+}
+
+@keyframes imgStartTileAnimation {
+  0% {
+    opacity: 1;
+    width: 0;
+    height: 0;
+  }
+  90% {
+    opacity: 1;
+    width: 80px;
+    height: 80px;
+    padding-bottom: 10px;
+  }
+  100% {
+    opacity: 1;
+    width: 75px;
+    height: 75px;
+    padding-bottom: 0;
+  }
+}
+
+.conversation-tile > p {
+  overflow: hidden;
+  margin: 10px;
+  font-family: "Roboto Light";
+  font-size: 16px;
+  letter-spacing: 1px;
+  padding: 16px;
+  display: block;
+  border: 1px solid #f17012;
+  background-color: transparent;
+  color: white;
+  border-radius: 8px;
+}
+
+.conversation-tile-text-start-animation {
+  animation-name: textStartTileAnimation;
+  animation-duration: 300ms;
+  animation-iteration-count: 1;
+  animation-timing-function: ease;
+  animation-fill-mode: forwards;
+  animation-delay: 700ms;
+}
+
+@keyframes textStartTileAnimation {
+  0% {
+    opacity: 1;
+    width: 0;
+    height: 0;
+  }
+  100% {
+    opacity: 1;
+    width: 100%;
+    height: auto;
+  }
+  100% {
+    opacity: 1;
+    width: 100%;
+    height: auto;
+  }
 }
