--- a/pizza-order-frontend/src/component/start-process/start-process.component.css
+++ b/pizza-order-frontend/src/component/start-process/start-process.component.css
@@ -6,24 +6,13 @@
   color: #191816;
   border: none;
   border-radius: 8px;
-  transition: all 0.3s ease-in-out;
 }
 
 .orange-button:hover {
-  animation-name: buttonHoverAnimation;
-  animation-duration: 1500ms;
-  animation-iteration-count: infinite;
-  animation-timing-function: ease;
-  animation-fill-mode: forwards;
+  background-color: #f14a1a;
 }
 
-@keyframes buttonHoverAnimation {
-  0%   { padding: 12px 24px; margin-top: 0; }
-  50%  { padding: 16px 32px; margin-top: -10px; }
-  100% { padding: 12px 24px; margin-top: 0; }
-}
-
-.orange-button:focus {
+.orange-button-animation {
   content: none;
   animation-name: buttonClickAnimation;
   animation-duration: 1250ms;
