--- a/pizza-order-frontend/src/component/start-process/start-process.component.html
+++ b/pizza-order-frontend/src/component/start-process/start-process.component.html
@@ -1,3 +1,3 @@
 <div class="center-group">
-  <button class="orange-button" (click)="startProcess()">Start process</button>
+  <button #startButton class="orange-button" (click)="startProcess(startButton)">Start process</button>
 </div>
