Added a response in pizzeria-answered.component

--- a/pizza-order-frontend/src/component/pizzeria-answered/pizzeria-answered.component.css
+++ b/pizza-order-frontend/src/component/pizzeria-answered/pizzeria-answered.component.css
@@ -119,6 +119,10 @@
   background: #f17012 !important;
 }
 
+.display-none {
+  display: none;
+}
+
 .your-answer {
   background: #f17012 !important;
   width: 60%;
