--- a/pizza-order-frontend/src/component/pizzeria-answered/pizzeria-answered.component.html
+++ b/pizza-order-frontend/src/component/pizzeria-answered/pizzeria-answered.component.html
@@ -10,6 +10,10 @@
           <p id="{{answer.key}}-paragraph" class="your-answer-option" (click)="chooseAction(answer.key)">{{answer.value}}</p>
         </div>
       </div>
+      <div class="conversation-tile">
+        <img id="reaction-img" class="tile-hidden" src="assets/images/waitress.png" alt="waitress">
+        <p id="reaction-text" class="tile-hidden"></p>
+      </div>
     </div>
   </div>
 </div>
