--- a/pizza-order-frontend/src/app/app.component.html
+++ b/pizza-order-frontend/src/app/app.component.html
@@ -11,4 +11,8 @@
     <router-outlet></router-outlet>
   </div>
 </div>
-<div id="greyScreen" class="grey-screen display-none"></div>
+<div *ngIf="showDialog">
+  <div id="greyScreen" class="grey-screen"></div>
+  <app-choose-pizza></app-choose-pizza>
+</div>
+
