Added pizza tiles

--- a/pizza-order-frontend/src/app/app.component.html
+++ b/pizza-order-frontend/src/app/app.component.html
@@ -13,6 +13,6 @@
 </div>
 <div *ngIf="showDialog">
   <div id="greyScreen" class="grey-screen"></div>
-  <app-choose-pizza></app-choose-pizza>
+  <app-choose-pizza class="display-pizzas"></app-choose-pizza>
 </div>
 
