--- a/pizza-order-frontend/src/components/choose-pizza/choose-pizza.component.html
+++ b/pizza-order-frontend/src/components/choose-pizza/choose-pizza.component.html
@@ -1,3 +1,3 @@
-<div class="pizza-group" *ngFor="let pizza of pizzas">
-  <app-pizza-tile [pizza]="pizza"></app-pizza-tile>
+<div class="pizza-group">
+  <app-pizza-tile *ngFor="let pizza of pizzas" [pizza]="pizza"></app-pizza-tile>
 </div>
