--- a/pizza-order-frontend/src/app/app.component.css
+++ b/pizza-order-frontend/src/app/app.component.css
@@ -53,3 +53,14 @@
   flex-grow: 1;
   height: 100vh;
 }
+
+.display-pizzas {
+  position: fixed;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  opacity: 1;
+  z-index: 12;
+}
+
