Added answer animation

--- a/pizza-order-frontend/src/components/pizzeria-answered/pizzeria-answered.component.html
+++ b/pizza-order-frontend/src/components/pizzeria-answered/pizzeria-answered.component.html
@@ -14,6 +14,13 @@
         <img id="reaction-img" class="tile-hidden" src="assets/images/waitress.png" alt="waitress">
         <p id="reaction-text" class="tile-hidden"></p>
       </div>
+      <div class="conversation-tile tile-hidden tile-answer-start-animation">
+        <p id="your-pick" class="tile-hidden">{{data.pizzaPicked?.name}} looks nice.</p>
+      </div>
+      <div class="conversation-tile">
+        <img id="picked-img" class="tile-hidden" src="assets/images/waitress.png" alt="waitress">
+        <p id="picked-text" class="tile-hidden">Great! Do you want to pick some extras to your pizza?</p>
+      </div>
     </div>
   </div>
 </div>
