Added flexible view

--- a/pizza-order-frontend/src/components/pizzeria-answered/pizzeria-answered.component.css
+++ b/pizza-order-frontend/src/components/pizzeria-answered/pizzeria-answered.component.css
@@ -1,9 +1,9 @@
 .calling-tab {
   width: 450px;
+  min-height: 850px;
   height: auto !important;
   display: flex;
   justify-content: center;
-  align-items: center;
 }
 
 .conversation-group {
