--- a/pizza-order-frontend/src/components/pizzeria-answered/pizzeria-answered.component.html
+++ b/pizza-order-frontend/src/components/pizzeria-answered/pizzeria-answered.component.html
@@ -1,5 +1,5 @@
 <div class="center-group">
-  <div class="calling-tab">
+  <div id="calling-tab" class="calling-tab">
     <div class="conversation-group">
       <div class="conversation-tile">
         <img class="tile-hidden tile-img-start-animation" src="assets/images/waitress.png" alt="waitress">
