--- a/pizza-order-frontend/src/components/pizzeria-answered/pizzeria-answered.component.css
+++ b/pizza-order-frontend/src/components/pizzeria-answered/pizzeria-answered.component.css
@@ -16,10 +16,10 @@
 
 @keyframes callingTabEndAnimation {
   0% {
-    margin-left: 0;
+    transform: translateX(0);
   }
   100% {
-    margin-left: 2000px;
+    transform: translateX(2000px);
   }
 }
 
