--- a/pizza-order-frontend/src/components/write-address/write-address.component.html
+++ b/pizza-order-frontend/src/components/write-address/write-address.component.html
@@ -1,5 +1,67 @@
 <div class="center-group">
   <div class="calling-tab slide-in">
+    <form #addressForm="ngForm" class="form-group">
+        <input type="text" class="form-control" id="name"
+               required
+               [(ngModel)]="address.name" name="name"
+               #name="ngModel" placeholder="Name">
+        <div [hidden]="name.valid || !name.touched"
+             class="control-alert">
+          Name is required
+        </div>
 
+        <input type="text" class="form-control" id="phone"
+               required
+               [(ngModel)]="address.phone" name="phone"
+               #phone="ngModel" placeholder="Phone">
+        <div [hidden]="phone.valid || !phone.touched"
+             class="control-alert">
+          Phone is required
+        </div>
+
+        <input type="text" class="form-control" id="street"
+               required
+               [(ngModel)]="address.street" name="street"
+               #street="ngModel" placeholder="Street">
+        <div [hidden]="street.valid || !street.touched"
+             class="control-alert">
+          Street is required
+        </div>
+
+        <input type="text" class="form-control" id="building"
+               required
+               [(ngModel)]="address.building" name="building"
+               #building="ngModel" placeholder="Building">
+        <div [hidden]="building.valid || !building.touched"
+             class="control-alert">
+          Building is required
+        </div>
+
+        <input type="text" class="form-control" id="suite"
+               [(ngModel)]="address.suite" name="suite"
+               #suite="ngModel" placeholder="Suite">
+
+        <input type="text" class="form-control" id="city"
+               required
+               [(ngModel)]="address.city" name="city"
+               #city="ngModel" placeholder="City">
+        <div [hidden]="city.valid || !city.touched"
+             class="control-alert">
+          City is required
+        </div>
+
+        <input type="text" class="form-control" id="zipCode"
+               required
+               [(ngModel)]="address.zipCode" name="zipCode"
+               #zipCode="ngModel" placeholder="Zip Code">
+        <div [hidden]="zipCode.valid || !zipCode.touched"
+             class="control-alert">
+          Zip code is required
+        </div>
+
+        <button class="submit-button" (click)="addAddress()" [disabled]="!addressForm.form.valid">Save</button>
+
+        <button class="fill-button" (click)="mockAddress()">Fill it with dummy address</button>
+    </form>
   </div>
 </div>
